--- a/config/config.yaml
+++ b/config/config.yaml
@@ -7,10 +7,15 @@ data_ingestion:
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
 
+
+
 prepare_base_model:
   root_dir: artifacts/prepare_base_model
   base_model_path: artifacts/prepare_base_model/base_model.h5
   updated_base_model_path: artifacts/prepare_base_model/base_model_updated.h5
+
+
+
 
 prepare_callbacks:
   root_dir: artifacts/prepare_callbacks
@@ -18,3 +23,8 @@ prepare_callbacks:
   checkpoint_model_filepath: artifacts/prepare_callbacks/checkpoint_dir/model.h5
 
 
+
+
+training:
+  root_dir: artifacts/training
+  trained_model_path: artifacts/training/model.h5
